<!--

 Pata Data - Displays World Bank JSON on Kenya

 Copyright (C) 2016 Kairu Joshua Wambugu

 This program is free software: you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
 the Free Software Foundation, either version 3 of the License, or
 (at your option) any later version.

 This program is distributed in the hope that it will be useful,
 but WITHOUT ANY WARRANTY; without even the implied warranty of
 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 GNU General Public License for more details.

 You should have received a copy of the GNU General Public License
 along with this program.  If not, see http://www.gnu.org/licenses/.

 -->

<resources>

    <string name="app_name">Pata Data</string>

    <!-- Strings for the nav drawer -->

    <string name="dataset">Dataset</string>
    <string name="start_year">Start Year</string>
    <string name="end_year">End Year</string>
    <string name="dash">-</string>

    <!-- Strings for when there is no dataset selected yet -->

    <string name="no_datasets">No dataset to display yet. :-/</string>

    <!-- String for waiting for a fetch of the dataset -->

    <string name="loading">Loading. Please wait. . .</string>

    <!-- String for when there is an error -->

    <string name="error">Sorry. Something went amiss.</string>
    <!--<string name="suggestion_part_one">Please press</string>-->
    <!--<string name="suggestion_part_two"-->

    <!-- Strings for the tool bar -->

    <string name="toolbar_edit">Edit</string>
    <string name="toolbar_refresh">Refresh</string>
    <string name="toolbar_chart">Chart</string>
    <string name="toolbar_table">Table</string>
    <string name="toolbar_settings">Settings</string>

    <!-- Strings for the progress svg -->

    <string name="progress_indicator_group">Progress indicator group</string>

    <!-- Preferences -->

    <!-- chart animation frequency choice title -->
    <string name="preference_chart_animation_frequency_title">Animate chart</string>

    <!-- chart animation frequency choice summary -->
    <string name="preference_chart_animation_frequency_summary">%s</string>
    <!-- %s for the selected frequency -->

    <string name="preference_chart_animate_once">Just once</string>
    <string name="preference_chart_animate_always">Every time</string>

    <string name="preference_chart_animation_frequency_start_summary">Select how often the line chart will animate</string>

    <!-- round off choice title -->
    <string name="preference_round_off_title">Round off</string>

    <!-- round off choice summary -->
    <string name="preference_round_off_summary_not_one">%d decimal places</string>
    <string name="preference_round_off_summary_one">%d decimal place</string>
    <!-- %d for the selected number of decimal places -->

    <string name="preference_problem">Err, something went wrong there. . .</string>

    <string name="preference_round_off_picker_inform">Select the number of decimal points to round data to</string>

    <string name="preference_round_off_picker_start_summary">Choose the number of decimal points to round data to</string>

</resources>
