<?xml version="1.0" encoding="utf-8"?>

<!--

 Pata Data - Displays World Bank JSON on Kenya

 Copyright (C) 2016 Kairu Joshua Wambugu

 This program is free software: you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
 the Free Software Foundation, either version 3 of the License, or
 (at your option) any later version.
 
 This program is distributed in the hope that it will be useful,
 but WITHOUT ANY WARRANTY; without even the implied warranty of
 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 GNU General Public License for more details.
 
 You should have received a copy of the GNU General Public License
 along with this program.  If not, see http://www.gnu.org/licenses/.

 -->

<!-- Menu for displaying action buttons in the error fragment -->

<menu

    xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"

    >

    <!-- Edit, to edit the dataset selected -->

    <item

        android:id="@+id/action_error_fragment_edit"

        android:icon="@drawable/ic_edit_white_24dp"

        android:title="@string/toolbar_edit"

        app:showAsAction="ifRoom"

        />

    <!-- Refresh, to reload -->

    <item

        android:id="@+id/action_error_fragment_refresh"

        android:icon="@drawable/ic_refresh_white_24dp"

        android:title="@string/toolbar_refresh"

        app:showAsAction="ifRoom"

        />

    <!-- Option for settings -->

    <item

        android:id="@+id/action_error_fragment_settings"

        android:title="@string/toolbar_settings"

        android:icon="@drawable/ic_settings_white_24dp"

        />

</menu>