<?xml version="1.0" encoding="utf-8"?>

<!--

 Pata Data - Displays World Bank JSON on Kenya

 Copyright (C) 2016 Kairu Joshua Wambugu

 This program is free software: you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
 the Free Software Foundation, either version 3 of the License, or
 (at your option) any later version.

 This program is distributed in the hope that it will be useful,
 but WITHOUT ANY WARRANTY; without even the implied warranty of
 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 GNU General Public License for more details.

 You should have received a copy of the GNU General Public License
 along with this program.  If not, see http://www.gnu.org/licenses/.

 -->

<RelativeLayout

    xmlns:app="http://schemas.android.com/apk/res-auto"

    xmlns:android="http://schemas.android.com/apk/res/android"

    android:id="@+id/fcd_rl"

    android:layout_width="match_parent"

    android:layout_height="match_parent"

    android:layout_gravity="start"

    android:layout_marginStart="@dimen/navigation_drawer_left_margin"

    android:layout_marginLeft="@dimen/navigation_drawer_left_margin"

    android:layout_marginRight="@dimen/navigation_drawer_right_margin"

    android:layout_marginEnd="@dimen/navigation_drawer_right_margin"

    >

    <!-- TextView to show the Dataset label -->

    <TextView

        android:id="@+id/fcd_tv_dataset"

        android:layout_width="match_parent"

        android:layout_height="@dimen/navigation_drawer_item_height"

        android:text="@string/dataset"

        android:textAppearance="@style/TextAppearance.AppCompat.Title"

        android:layout_marginTop="@dimen/navigation_drawer_space_between_content_areas"

        android:layout_marginBottom="@dimen/navigation_drawer_space_between_content_areas"

        />

    <!-- Spinner to contain the datasets -->

    <Spinner

        android:id="@+id/fcd_s_datasets"

        android:layout_width="match_parent"

        android:layout_height="@dimen/navigation_drawer_item_height"

        android:layout_marginBottom="@dimen/navigation_drawer_space_between_content_areas"

        android:layout_below="@id/fcd_tv_dataset"

        />

    <!-- A divider -->
    
    <View

        android:id="@+id/fcd_v_divider"

        android:layout_width="match_parent"

        android:layout_height="1dp"

        android:background="@android:color/darker_gray"

        android:layout_below="@id/fcd_s_datasets"

        />

    <!-- LinearLayout to hold the years -->

    <LinearLayout

        android:layout_marginTop="@dimen/navigation_drawer_space_between_content_areas"

        android:layout_width="match_parent"

        android:layout_height="wrap_content"

        android:layout_below="@id/fcd_v_divider"

        android:orientation="horizontal"

        android:baselineAligned="false"

        >

        <!-- LinearLayout to hold the start year components -->

        <LinearLayout

            android:layout_width="0dp"

            android:layout_height="match_parent"

            android:layout_weight="1"

            android:layout_marginRight="@dimen/navigation_drawer_space_between_content_areas"

            android:layout_marginEnd="@dimen/navigation_drawer_space_between_content_areas"

            android:orientation="vertical"

            >

            <!-- TextView to show the start year label -->

            <TextView

                android:text="@string/start_year"

                android:layout_width="wrap_content"

                android:layout_height="@dimen/navigation_drawer_item_height"

                android:textAppearance="@style/TextAppearance.AppCompat.Title"

                />

            <!-- Spinner to select the start year -->

            <Spinner

                android:id="@+id/fcd_s_start_year"

                android:layout_height="@dimen/navigation_drawer_item_height"

                android:layout_width="wrap_content"

                />

        </LinearLayout>


        <!-- LinearLayout to hold the end year components -->

        <LinearLayout

            android:layout_width="0dp"

            android:layout_weight="1"

            android:layout_height="match_parent"

            android:orientation="vertical"

            >

            <!-- TextView to show the end year label -->

            <TextView

                android:text="@string/end_year"

                android:layout_height="@dimen/navigation_drawer_item_height"

                android:layout_width="wrap_content"

                android:textAppearance="@style/TextAppearance.AppCompat.Title"

                />

            <!-- Spinner to select the end year -->

            <Spinner

                android:id="@+id/fcd_s_end_year"

                android:layout_height="@dimen/navigation_drawer_item_height"

                android:layout_width="wrap_content"

                />

        </LinearLayout>

    </LinearLayout>

    <!-- A FAB to search for the dataset -->

    <!-- No need for margin end and margin right since they are declared in the parent RelativeLayout -->

    <android.support.design.widget.FloatingActionButton

        android:layout_width="wrap_content"

        android:layout_height="wrap_content"

        android:id="@+id/fcd_fab_search"

        android:layout_marginLeft="@dimen/layout_margin_start"

        android:layout_marginStart="@dimen/layout_margin_start"

        android:layout_marginBottom="@dimen/layout_margin_bottom"

        android:layout_alignParentBottom="true"

        android:layout_alignParentRight="true"

        android:layout_alignParentEnd="true"


        app:srcCompat="@drawable/ic_search_white_24dp"

        app:elevation="6dp"

        app:fabSize="normal"

        app:pressedTranslationZ="12dp"

        app:borderWidth="0dp"

        app:layout_anchorGravity="bottom|right|end"

        />

</RelativeLayout>